docs/6.6.9/GXLS.md
<p>描述主要和重要更新内容。</p>
<span class="anchor" id="b9309829-286d-4dbb-b8b7-c93b898402ee"></span>
## 1.版本
<p><strong>v2022.11.8</strong></p>
<span class="anchor" id="f7dfd7db-76f7-43e6-b7e9-a3bf2d9156d6"></span>
## 2.更新历史
<ul>
<li><p>2022/11/8</p>
<ol>
<li><p>更新版本6.6.9，具体说明见<a href="../6.6.9BBGXSM/">6.6.9版本更新说明</a></p></li>
<li><p>新增<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYINVESTORPRODSPBMDETAIL/">ReqQryInvestorProdSPBMDetail</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYINVESTORPORTFMARGINRATIO/">ReqQryInvestorPortfMarginRatio</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYSPBMINVESTORPORTFDEF/">ReqQrySPBMInvestorPortfDef</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYSPBMPORTFDEFINITION/">ReqQrySPBMPortfDefinition</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYSPBMINTERPARAMETER/">ReqQrySPBMInterParameter</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYSPBMINTRAPARAMETER/">ReqQrySPBMIntraParameter</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYSPBMOPTIONPARAMETER/">ReqQrySPBMOptionParameter</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYSPBMFUTUREPARAMETER/">ReqQrySPBMFutureParameter</a></p></li>
<li><p>新增对应回调<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYSPBMFUTUREPARAMETER/">OnRspQrySPBMFutureParameter</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYSPBMOPTIONPARAMETER/">OnRspQrySPBMOptionParameter</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYSPBMINTRAPARAMETER/">OnRspQrySPBMIntraParameter</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYSPBMINTERPARAMETER/">OnRspQrySPBMInterParameter</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYSPBMPORTFDEFINITION/">OnRspQrySPBMPortfDefinition</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYSPBMINVESTORPORTFDEF/">OnRspQrySPBMInvestorPortfDef</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYINVESTORPORTFMARGINRATIO/">OnRspQryInvestorPortfMarginRatio</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYINVESTORPRODSPBMDETAIL/">OnRspQryInvestorProdSPBMDetail</a></p></li>
</ol></li>
<li><p>2022/8/25</p>
<ol>
<li><p>修订<a href="../QTYWGZ/QHQQDHQ-ZDCGZ/">期货期权的行权、自对冲</a>中的说明</p></li>
<li><p>删除<a href="../QTYWGZ/DCEZB.html#anchor-id-10">大商所组保</a>中TimeFirstVolume字段是大商所专用的说明</p></li>
<li><p>修订<a href="../QTYWGZ/HYZTBHSM/">合约状态变化说明</a></p></li>
</ol></li>
<li><p>2022/8/23</p>
<ol>
<li><p>更新版本至6.6.8，具体说明见<a href="../6.6.8BBGXSM/">6.6.8版本更新说明</a></p></li>
<li><p><a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPUSERLOGIN/">OnRspUserLogin</a>接口结构体有新增广期所时间字段</p></li>
<li><p>新增加页面<a href="../QTYWGZ/QHQQDHQ-ZDCGZ/">期货期权的行权、自对冲规则</a></p></li>
</ol></li>
<li><p>2022/6/20</p>
<ol>
<li><p>新增<a href="../QTYWGZ/JKZYXZYXHSM/">接口中一些重要序号说明</a></p></li>
<li><p>更新版本至6.6.7，具体说明见<a href="../6.6.7BBGXSM/">6.6.7版本更新说明</a></p></li>
<li><p><a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYINVESTOR/">OnRspQryInvestor</a>和<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYPRODUCT/">OnRspQryProduct</a>接口结构体有新增字段</p></li>
<li><p><a href="../CTSJGSJCJJK/_CTSJGSJCJJK/">看穿式监管数据采集说明</a>中新增<a href="../CTSJGSJCJJK/CTP-GETDATACOLLECTAPIVERSION/">CTP-GetDataCollectApiVersion</a></p></li>
<li><p>更新<a href="../CTSJGSJCJJK/CTP-GETSYSTEMINFO/">CTP-GetSystemInfo</a>中返回值的说明</p></li>
</ol></li>
<li><p>2022/6/8</p>
<ol>
<li>在页面<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYTRADINGACCOUNT.html#anchor-id-01">OnRspQryTradingAccount</a>中添加ReserveBalance和Reserve的说明</li>
</ol></li>
<li><p>2022/4/18</p>
<ol>
<li>在<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRTNORDER.html#anchor-id-11">OnRtnOrder</a>中新增faq</li>
</ol></li>
<li><p>2022/4/15</p>
<ol>
<li>在接口<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYORDER.html#anchor-id-10">OnRspQryOrder</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYTRADE.html#anchor-id-10">OnRspQryTrade</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRTNORDER.html#anchor-id-10">OnRtnOrder</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRTNTRADE.html#anchor-id-10">OnRtnTrade</a>中新增insertdate和tradedate的faq</li>
</ol></li>
<li><p>2022/4/14</p>
<ol>
<li>在<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYTRADINGACCOUNT/">OnRspQryTradingAccount</a>和<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYSECAGENTTRADINGACCOUNT/">OnRspQrySecAgentTradingAccount</a>中增加已废弃的字段描述</li>
</ol></li>
<li><p>2022/3/8</p>
<ol>
<li>修改<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYINSTRUMENT.html#anchor-id-02">OnRspQryInstrument</a>中MinMarketOrderVolume字段说明</li>
</ol></li>
<li><p>2022/3/2</p>
<ol>
<li>修改<a href="../QTYWGZ/BJHXJ.html#anchor-id-01">做市商询价和报价</a>中“是否会撤销前一次报价”行“中金所”为会自动撤销</li>
</ol></li>
<li><p>2022/3/1</p>
<ol>
<li>在<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQCOMBACTIONINSERT.html#anchor-id-01">ReqCombActionInsert</a>中增加示例说明。</li>
</ol></li>
<li><p>2022/2/23</p>
<ol>
<li><p>更新版本至6.6.5</p></li>
<li><p>新增加接口<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYTRADEROFFER/">OnRspQryTraderOffer</a>和<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYTRADEROFFER/">ReqQryTraderOffer</a></p></li>
<li><p>修订<a href="../QTYWGZ/GJYSTSZL/">各交易所特殊指令</a>，删除普通报单说明</p></li>
<li><p>修正<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYACCOUNTREGISTER/">ReqQryAccountregister</a>接口中描述错误，原“填写正确查询无返回”，实际只要签约成功后就能返回。</p></li>
<li><p>更新OrderInsert中<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQORDERINSERT.html#anchor-id-05">TimeCondition</a>的字段说明</p></li>
<li><p>新增<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYOPTIONINSTRCOMMRATE/">ReqQryOptionInstrCommRate</a>的<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYOPTIONINSTRCOMMRATE.html#anchor-id-01">faq</a></p></li>
<li><p>更新<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYINSTRUMENT.html#anchor-id-01">OnRspQryInstrument</a>中最大最小下单量说明</p></li>
<li><p>更新<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYBROKERTRADINGPARAMS.html#anchor-id-01">ReqQryBrokerTradingParams</a>中查询方法</p></li>
<li><p>新增<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQPARKEDORDERINSERT/">ReqParkedOrderInsert</a>接口关于组合合约预埋单说明</p></li>
<li><p>在报单流控说明中新增<a href="../QTYWGZ/LK.html#anchor-id-01">分用户会话数设置的说明</a></p></li>
<li><p>修改<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQOPTIONSELFCLOSEINSERT/">ReqOptionSelfCloseInsert</a>的Hedgeflag说明改成必填</p></li>
</ol></li>
<li><p>2021/11/3</p>
<ol>
<li><p>修订<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYINVESTORPRODUCTGROUPMARGIN/">ReqQryInvestorProductGroupMargin</a>中字段注释</p></li>
<li><p>增加<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQAUTHENTICATE/">ReqAuthenticate</a>中faq报错说明</p></li>
</ol></li>
<li><p>2021/8/30</p>
<ol>
<li><p>在<a href="../QTYWGZ/GJYSTSZL.html#anchor-id-04">各交易所特殊指令</a>中金所最优价转限价，五档最优价转限价指令</p></li>
<li><p>在<a href="../CTSJGSJCJJK/CJFAQ.html#anchor-id-05">常见FAQ</a>中新增28点问答</p></li>
</ol></li>
<li><p>2021/8/13</p>
<ol>
<li>新增<a href="../CTSJGSJCJJK/_CTSJGSJCJJK.html#anchor-id-03">看穿式监管数据采集说明</a>中穿透式权限要求说明</li>
</ol></li>
<li><p>2021/7/15</p>
<ol>
<li>新增行情登录接口<a href="../HQJK/CTHOSTFTDCMDAPI/REQUSERLOGIN/">ReqUserLogin</a>的行情登录验证说明</li>
</ol></li>
<li><p>2021/7/13</p>
<ol>
<li><p>新增页面“各家交易所特殊指令”</p></li>
<li><p>新增tas介绍页面中对持仓的说明</p></li>
<li><p>新增<a href="../QTYWGZ/BJHXJ.html#anchor-id-02">做市商询价和报价</a>页面中OrderType和TradeType字段说明</p></li>
<li><p>新增<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYINVESTORPOSITION/">OnRspQryInvestorPosition</a>中PositionCost的说明</p></li>
</ol></li>
<li><p>2021/5/21</p>
<ol>
<li><p>更新做市商说明上期所期货合约其他交易所使用接口不同</p></li>
<li><p>6.6.1P1说明中支持订单应为QuoteSysID</p></li>
</ol></li>
<li><p>2021/5/10</p>
<ol>
<li><p>更新6.6.1P1版本说明</p></li>
<li><p>修正<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYOPTIONINSTRTRADECOST/">ReqQryOptionInstrTradeCost</a>接口InvestorID字段可作为过滤条件</p></li>
<li><p>修正<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYOPTIONINSTRTRADECOST/">ReqQryOptionInstrTradeCost</a>接口InputPrice和UnderlyingPrice中文解释错误问题</p></li>
<li><p>修正流控说明页在途流控描述不准确问题，原在未收到响应前，不能发起下一笔查询请求 改为 在未收完所有的查询响应前，不能发起下一笔查询请求 </p></li>
</ol></li>
<li><p>2021/3/1</p>
<ol>
<li>行情<a href="../HQJK/CTHOSTFTDCMDAPI/CREATEFTDCMDAPI/">CreateFtdcMdApi</a>添加通过tcp、udp、组播模式连接mdfront的说明</li>
</ol></li>
<li><p>2021/1/25</p>
<ol>
<li><p>新增页面<a href="../6.5.1BBGXSMBCSM/">6.5.1版本更新说明补充说明</a></p></li>
<li><p>对<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYCLASSIFIEDINSTRUMENT/">ReqQryClassifiedInstrument</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYCOMBPROMOTIONPARAM/">ReqQryCombPromotionParam</a>添加说明</p></li>
</ol></li>
<li><p>2021/1/6</p>
<ol>
<li>修正<a href="../6.5.1BBGXSM/">6.5.1版本更新说明</a>中运行环境说明，windows支持32位和64位。</li>
</ol></li>
<li><p>2020/12/24</p>
<ol>
<li><p>添加brokerid在认证中是必填字段</p></li>
<li><p>6.5.1中ipv6说明RegisterFens-&gt;RegisterNmaeServer修订</p></li>
<li><p><a href="../ZY/">主页</a>添加线程数说明</p></li>
</ol></li>
<li><p>2020/12/10</p>
<ol>
<li><p>调整Tas手续费和保证金说明</p></li>
<li><p>修改<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRTNBULLETIN/">OnRtnBulletin</a>说明属于公有流</p></li>
<li><p>修改<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRTNINSTRUMENTSTATUS/">OnRtnInstrumentStatus</a>问答</p></li>
<li><p>调整<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYINSTRUMENT/">ReqQryInstrument</a>中FAQ说明</p></li>
<li><p>调整ReqQueryMaxOrderVolume名称为<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQUERYMAXORDERVOLUME/">ReqQryMaxOrderVolume</a></p></li>
<li><p>增加<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONFRONTDISCONNECTED/">OnFrontDisconnected</a>说明</p></li>
<li><p>“<a href="../QTYWGZ/BJHXJ/">做市商询价和报价</a>”页面对于是否会撤销前一次报价说明增加七期说明</p></li>
<li><p><a href="../QTYWGZ/DCEZB/">大商所组保</a>合约名称修改BUL-&gt;BLS   BER-&gt;BES</p></li>
<li><p><a href="../ZY/">主页</a>增加字符集说明</p></li>
<li><p>增加Ref字段需要递增说明</p></li>
<li><p>对于银期转账中TradeCode说明修改。</p></li>
<li><p><a href="../JYJK/CTHOSTFTDCTRADERSPI/SUBSCRIBEPUBLICTOPIC/">SubscribePublicTopic</a>增加一种私有流方式</p></li>
<li><p>“<a href="../QTYWGZ/DCEZB/">大商所组保</a>”增加FAQ说明</p></li>
</ol></li>
<li><p>2020/11/6</p>
<ol>
<li><p>增加各个接口对ipv6的说明</p></li>
<li><p>修订<a href="../JYJK/CTHOSTFTDCTRADERSPI/REGISTERUSERSYSTEMINFO/">RegisterUserSystemInfo</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/SUBMITUSERSYSTEMINFO/">SubmitUserSystemInfo</a>接口字段说明</p></li>
</ol></li>
<li><p>2020/10/21</p>
<ol>
<li><p>更新6.5.1apichm说明</p></li>
<li><p>新增6.5.1api版本说明</p></li>
<li><p>新增两个接口<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYCLASSIFIEDINSTRUMENT/">ReqQryClassifiedInstrument</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQRYCOMBPROMOTIONPARAM/">ReqQryCombPromotionParam</a>对应的回调<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYCLASSIFIEDINSTRUMENT/">OnRspQryClassifiedInstrument</a>、<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYCOMBPROMOTIONPARAM/">OnRspQryCombPromotionParam</a></p></li>
<li><p>ReqQueryMaxOrderVolume接口修改为<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQQUERYMAXORDERVOLUME/">ReqQryMaxOrderVolume</a>，对应的回调OnRspQueryMaxOrderVolume修改为<a href="../JYJK/CTHOSTFTDCTRADERAPI/SM/">OnRspQryMaxOrderVolume</a></p></li>
</ol></li>
<li><p>2020/04/29</p>
<ol>
<li><p>更新到6.3.19 api说明，更新对应新增字段。</p></li>
<li><p>新增tas介绍</p></li>
<li><p>新增fens介绍</p></li>
<li><p>更正代码示例错误，<a href="../HQJK/CTHOSTFTDCMDAPI/RELEASE/">Release</a>()前使用<a href="../JYJK/CTHOSTFTDCTRADERSPI/REGISTERSPI/">RegisterSpi</a>(NULL)，这个代码是错误的，会导致api概率崩溃。</p></li>
<li><p>新增<a href="../HQJK/CTHOSTFTDCMDAPI/REQUSERLOGOUT/">ReqUserLogout</a>、<a href="../JYJK/CTHOSTFTDCTRADERSPI/REQAUTHENTICATE/">ReqAuthenticate</a>、增加流控参数部分说明、郑商所行情说明。</p></li>
</ol></li>
<li><p>2020/03/13</p>
<ol>
<li>新增init/release线程安全说明</li>
</ol></li>
<li><p>2020/03/06</p>
<ol>
<li>修正logout之后是否会触发重连机制</li>
</ol></li>
<li><p>2020/02/21</p>
<ol>
<li><p>新添加<a href="../QTYWGZ/SJLSM/">通讯模式</a>中基本接口所属的数据流</p></li>
<li><p>完善做市商接受询价的说明</p></li>
<li><p>修改对于撤单接口就上期所新增挂单激活操作在本系统是否支持说明</p></li>
<li><p>新增条件单说明</p></li>
<li><p>新增各个交易所盘中行情合约状态推送的具体状态</p></li>
</ol></li>
<li><p>2019/11/28</p>
<ol>
<li><p>新增<a href="../QTYWGZ/BJHXJ/">做市商询价和报价</a>指令介绍</p></li>
<li><p>修正<a href="../HQJK/CTHOSTFTDCMDAPI/SUBSCRIBEFORQUOTERSP/">SubscribeForQuoteRsp</a>中FAQ回答错误。普通投资者只能订阅上期所和中金所询价通知 改为 普通投资者能订阅四所的询价通知。</p></li>
</ol></li>
<li><p>2019/07/12</p>
<ol>
<li>新增<a href="../QTYWGZ/DBHB/">报单回调规则</a>、<a href="../QTYWGZ/DJHDGZ/">报价回调规则</a></li>
</ol></li>
<li><p>2019/07/03</p>
<ol>
<li>新增相关穿透式的一些问题回答</li>
</ol></li>
<li><p>2019/06/27</p>
<ol>
<li><p>新增<a href="../QTYWGZ/DCEZB/">大商所组保</a>业务说明</p></li>
<li><p>修正<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYINVESTORPOSITION/">OnRspQryInvestorPosition</a>和<a href="../JYJK/CTHOSTFTDCTRADERAPI/ONRSPQRYINVESTORPOSITIONDETAIL/">OnRspQryInvestorPositionDetail</a>里缺失TimeFirstVolume和PositionCostOffset字段的问题</p></li>
</ol></li>
<li><p>2019/06/05</p>
<ol>
<li>新增CTP流控说明</li>
</ol></li>
<li><p>2019/05/27</p>
<ol>
<li><p>新增<a href="../JYJK/_JYJK/">交易接口</a>和<a href="../HQJK/_HQJK/">行情接口</a>代码示例说明。</p></li>
<li><p>新增<a href="../YDZY/">阅读指引</a>，方便用户快速上手chm文档。</p></li>
</ol></li>
<li><p>2019/04/29</p>
<ol>
<li>新增看穿式监管数据采集的<a href="../CTSJGSJCJJK/CJFAQ/">常见FAQ</a>。</li>
</ol></li>
<li><p>2019/4/11</p>
<ol>
<li>新增二代行情API接口说明，该API新增接口QryMulticastInstrument。</li>
</ol></li>
<li><p>2019/3/14</p>
<ol>
<li><p>增加看穿式监管相关API接口的返回值。</p></li>
<li><p><a href="../ZY/">主页</a>新增版本兼容性说明，务必了解！</p></li>
</ol></li>
<li><p>2019/3/14</p>
<ol>
<li>增加有关看穿式监管相关问题接单。</li>
</ol></li>
</ul>
